--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,15 +1,15 @@
 <div class="row">
-  <div class="col-xs-12">
-    <img [src]="recipe.imageURL" alt="{{recipe.name}}" class="img-fluid" />
-  </div>
-  <div class="row">
+  <div class="row mt-3">
     <div class="col-xs-12">
       <h1>{{recipe.name}}</h1>
     </div>
   </div>
+  <div class="col-xs-12">
+    <img [src]="recipe.imageURL" alt="{{recipe.name}}" class="img-fluid" />
+  </div>
 </div>
 
-<div class="row">
+<div class="row mt-2">
   <div class="col-xs-12">
     <div class="dropdown">
       <a style="cursor: pointer" class="dropdown-toggle" id="recipeDetailDropdownMenuLink" role="button"
