--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,8 +1,15 @@
+<div class="ing-alert row mt-3">
+  <div class="col-12 alert alert-success" role="alert" *ngIf="displayAlert" [ngClass]="{}">
+    L'ingredient '{{editedIngredient.name}}'
+    été {{isDeleted? 'supprimé de la liste d\'achat' : 'modifié'}}!
+  </div>
+</div>
+<!-- Formulaire d'achat -->
 <div class="row mt-5 p-5 bg-light">
   <div class="col-xs-12">
     <form #f="ngForm" (ngSubmit)="onAddEditIngredient(f)">
-      <div class="form-row">
-        <div class="form-group col-md-8">
+      <div class="row">
+        <div class="form-group col-6">
           <label for="inputIngredient">Ingredient</label>
           <input type="text"
                  class="form-control"
@@ -13,8 +20,8 @@
           >
         </div>
 
-        <div class="form-group col-md-2">
-          <label for="inputQuantity">Qté</label>
+        <div class="form-group col-3">
+          <label for="inputQuantity">Quantité</label>
           <input type="text"
                  class="form-control"
                  id="inputQuantity"
@@ -25,7 +32,7 @@
           >
         </div>
 
-        <div class="form-group col-md-2">
+        <div class="form-group col-3">
           <label for="inputUnit">Unité</label>
           <select id="inputUnit"
                   class="form-control"
@@ -41,9 +48,9 @@
           </select>
         </div>
       </div>
-      <div class="float-right mt-2">
+      <div class="form-row mt-2 d-flex flex-row-reverse">
         <button type="button"
-                class="btn btn-outline-dark"
+                class="btn btn-outline-dark ms-2"
                 (click)="onReset()"
         > Réinitialiser</button>
         <button
